webook/k8s-webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook
spec:
  # 表示副本数量 共有三个
  replicas: 3
  selector:
    matchLabels:
      app: webook
  # template 描述的是你的 POD 是什么样的
  template:
    metadata:
      labels:
        app: webook
    # POD 的具体信息
    spec:
      containers:
        - name: webook
          image: flycash/webook:v0.0.1
          ports:
            # 对应server.run 的8080
            - containerPort: 8080
