webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-mysql
spec:
  selector:
    app: webook-live-mysql
  ports:
    - protocol: TCP
      # 我访问的端口
      port: 11309
      targetPort: 3306
      # 当type为NodePort的时候，这里需要指明nodePort 并且访问的时候也去访问那个nodePort
  type: LoadBalancer
