webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-live-redis
spec:
  selector:
    app: webook-live-redis
  ports:
    - protocol: TCP
      port: 11479
      targetPort: 6379 # redis默认端口
      nodePort: 30003
  type: NodePort
